# vscode-cmake

./: CMakeLists.txt  README.md  main.cpp  swap.cpp  swap.h
ddemo/: CMakeLists.txt
ddemo/include/: ddemo.h
ddemo/src/: ddemo.cpp
sdemo/: CMakeLists.txt
sdemo/include/: sdemo.h
sdemo/src/: sdemo.cpp
swap/: CMakeLists.txt
swap/src/: main.cpp
